# vigil

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
scripts/: record_demo.sh
src/vigil/: __main__.py  alerts.py  app.py  collector.py  config.py  demo.py  discovery.py  notifications.py  parser.py  presets.py  ssh.py  state.py  storage.py
src/vigil/providers/: __init__.py  runpod.py  vast.py
src/vigil/widgets/: __init__.py  command_input.py  confirm_destroy.py  global_search.py  help_overlay.py  hint_bar.py  instance_manager.py  instance_panel.py  log_viewer.py  metrics_overview.py  nvidia_smi.py  setup_wizard.py  stuck_bar.py
tests/: test_alerts.py  test_collector.py  test_config.py  test_discovery.py  test_instance_manager.py  test_notifications.py  test_parser.py  test_presets.py  test_state.py  test_storage.py  test_stuck_bar.py
