[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigil-gpu"
version = "0.2.0"
description = "Real-time TUI for monitoring cloud GPU training instances"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{name = "Matteo He", email = "matteohe.tech@gmail.com"}]
keywords = ["gpu", "monitoring", "training", "tui", "machine-learning", "vast.ai", "cloud-gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.40",
    "asyncssh>=2.14",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-anyio>=0.0.0",
]

[project.urls]
Homepage = "https://github.com/helpmatteo/vigil"
Issues = "https://github.com/helpmatteo/vigil/issues"
Changelog = "https://github.com/helpmatteo/vigil/blob/main/CHANGELOG.md"
Repository = "https://github.com/helpmatteo/vigil"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil"]

[project.scripts]
vigil = "vigil.__main__:main"

[tool.pytest.ini_options]

